apps/goatlint/src/snapshots/_fixtures__cli__linter__debugger.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/linter/debugger.js
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
